--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,8 +1,7 @@
 fixtures:
-  repositories:
-    stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
-
-# profile module layout, default include ntp module
+    stdlib:
+      repo: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
+      ref: "4.12.0"
     ntp: "https://github.com/puppetlabs/puppetlabs-ntp.git"
     apt: "https://github.com/puppetlabs/puppetlabs-apt.git"
     rspec_monitor: "git://github.com/pgomersbach/test-rspec_monitor.git"
