use new version of terraform

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -6,7 +6,8 @@ fixtures:
     ntp: "https://github.com/puppetlabs/puppetlabs-ntp.git"
     apt: "https://github.com/puppetlabs/puppetlabs-apt.git"
     rspec_monitor: "git://github.com/pgomersbach/test-rspec_monitor.git"
-    terraform: "https://github.com/inkblot/puppet-terraform.git"
+    hashicorp: "https://github.com/inkblot/puppet-hashicorp.git"
+    gnupg: "https://github.com/dgolja/golja-gnupg.git"
     staging: "https://github.com/nanliu/puppet-staging.git"
     vcsrepo: "https://github.com/puppetlabs/puppetlabs-vcsrepo"
     ca_cert: "https://github.com/pcfens/puppet-ca_cert.git"
