add ansible install

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -11,6 +11,7 @@ fixtures:
     ca_cert: "https://github.com/pcfens/puppet-ca_cert.git"
     archive: "https://github.com/voxpupuli/puppet-archive.git"
     ansible: "https://github.com/icann-dns/puppet-ansible.git"
+    tea: "https://github.com/icann-dns/puppet-tea"
 
   symlinks:
     profile_development: "#{source_dir}"
