move to https for fixture

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,13 +3,13 @@ fixtures:
     stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
     ntp: "https://github.com/puppetlabs/puppetlabs-ntp.git"
     apt: "https://github.com/puppetlabs/puppetlabs-apt.git"
-    rspec_monitor: "git://github.com/pgomersbach/test-rspec_monitor.git"
+    rspec_monitor: "https://github.com/pgomersbach/test-rspec_monitor.git"
     hashicorp: "https://github.com/inkblot/puppet-hashicorp.git"
     gnupg: "https://github.com/dgolja/golja-gnupg.git"
     staging: "https://github.com/nanliu/puppet-staging.git"
     vcsrepo: "https://github.com/puppetlabs/puppetlabs-vcsrepo"
     ca_cert: "https://github.com/pcfens/puppet-ca_cert.git"
-    remote_file: "git://github.com/lwf/puppet-remote_file.git"
+    remote_file: "https://github.com/lwf/puppet-remote_file.git"
     archive: "https://github.com/voxpupuli/puppet-archive.git"
     ssh_keygen: "https://github.com/voxpupuli/puppet-ssh_keygen.git"
 
